--- a/404.html
+++ b/404.html
@@ -146,6 +146,14 @@ stroke-linejoin="round" class="feather feather-home">
     &nbsp;
 
     <div class="footer_social-icons">
+<a href="mailto:xing.han@huhaha.com" target="_blank" rel="noopener noreferrer me"
+    title="Email">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 21" fill="none" stroke="currentColor" stroke-width="2"
+    stroke-linecap="round" stroke-linejoin="round">
+    <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
+    <polyline points="22,6 12,13 2,6"></polyline>
+</svg>
+</a>
 <a href="https://github.com/davidh3f" target="_blank" rel="noopener noreferrer me"
     title="Github">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
